feat: updated client components
